# TraceGlass

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
_bmad-output/: manual-test-plan.md
_bmad-output/brainstorming/: brainstorming-session-2026-02-07.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-multi-module-structure.md  1-2-f-droid-reproducibility-configuration.md  1-3-github-actions-ci-pipeline.md  1-4-live-camera-feed.md  1-5-flashlight-toggle.md  2-1-image-import-via-photo-picker.md  2-2-overlay-rendering-on-camera-feed.md  2-3-opacity-control.md  2-4-overlay-visual-modes.md  2-5-overlay-positioning.md  2-6-tracing-session-control-visibility.md  2-7-overlay-lock-viewport-zoom.md  3-1-opencv-jni-integration-basic-marker-detection.md  3-2-3-tracking-stabilization.md  3-2-marker-based-overlay-stabilization.md  3-3-tracking-resilience-fallback.md  3-4-tracking-status-indicator-audio-feedback.md  4-1-automatic-snapshot-capture.md  4-2-mp4-video-compilation.md  4-3-timelapse-export-sharing.md  4-4-timelapse-snapshot-preservation.md  5-1-session-auto-save-on-background.md  5-2-session-auto-restore-on-foreground.md  5-3-explicit-session-pause-resume.md  6-1-onboarding-carousel.md  6-2-interactive-camera-walkthrough.md  6-3-setup-guides-external-links.md  6-4-onboarding-flow-control.md  7-1-settings-screen.md  7-2-break-reminders.md  7-3-app-icon-about-screen.md  8-1-perspective-correction.md  8-2-paper-size-agnostic-4-marker-reference.md  8-3-3-marker-constrained-homography.md  8-4-camerax-intrinsics-integration.md  9-1-overlay-transform-thread-safety.md  9-2-tracing-viewmodel-state-management.md  9-3-i18n-hardcoded-strings.md  9-4-camera-frame-analyzer-lifecycle.md  adversarial-review-backlog.md  (+2 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  (+4 more)
app/: build.gradle.kts  proguard-rules.pro
core/cv/src/main/cpp/: CMakeLists.txt  marker_detector_jni.cpp
docs/: architecture.md  component-inventory.md  development-guide.md  generate-markers.py  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
gradle/: libs.versions.toml
(+144 files in other folders)
